# wasm-docker-test

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  run.sh
files/: index.html  index.js
files/hello_world/: Cargo.toml  index.html
files/hello_world/pkg/: hello_world.d.ts  hello_world.js  hello_world_bg.wasm  hello_world_bg.wasm.d.ts  package.json
files/wasm-webgl/: Cargo.toml  index.html  styles.css
files/wasm-webgl/pkg/: package.json  wasm_webgl.d.ts  wasm_webgl.js  wasm_webgl_bg.wasm  wasm_webgl_bg.wasm.d.ts
files/wasm-webgl/src/: lib.rs
src/: index.html  main.rs
thunder-tests/: thunderActivity.json
