[package]
name = "wasm-webgl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["cdylib"]

[dependencies]
js-sys = "0.3.51"
wasm-bindgen = "0.2.74"

[dependencies.web-sys]
version = "0.3.4"
features = [
    "Document",
    "Element",
    "Window",
    "HtmlCanvasElement",
    "WebGlBuffer",
    'WebGlRenderingContext',
    'WebGlProgram',
    'WebGlShader',
]
